> Moved track toolbox in front of the grid
> When bumping up tracks, make sure they sit at y=0 instead of y=0.1 meters
# 2.09.02 (60933) Feb 1, 2012
> Bump the tracks back onscreen if they are moved out of bounds
# 2.09.01 (60906) Feb 1, 2012
> energy-skate-park-basics: Bump up the tracks if they go below the ground
> Fixed a bug in track building
# 2.09.00 (60887) Jan 31, 2012
> Improvements for control panels
# 2.08.30 (60883) Jan 31, 2012
Energy Skate Park: Fill up the track toolbox when deleting a track (but not when tracks are joined)
Energy Skate Park: Fixed: Pie chart button doesn't reset on "Reset All"
# 2.08.29 (60879) Jan 31, 2012
Energy Skate Park Basics: Fixed: When a user deletes a track, it goes back into the toolbox
Common: Fixed: Deleting a track by deleting its control points causes an exception
# 2.08.28 (60873) Jan 31, 2012
Energy Skate Park: Switched back to sim speed slider instead of radio buttons for this sim
Energy Skate Park: Removed limitation on number of tracks
# 2.08.27 (60857) Jan 31, 2012
Fixed buggy behavior for connecting tracks
For purposes of limiting created tracks, count the number of created tracks, not the total number of joined tracks (which changes as more tracks are joined)
Updated credits
> Added new sim "Energy Skate Park: Basics"
# 2.08.26 (60834) Jan 31, 2012
Removed easter eggs that allow the user to add and remove skaters with "a" and "r" keys
Changed Energy Skate Park main (non-basics) application "friction" text back to "track friction" since it does not apply to the ground
Renamed "Track friction" to "Friction"
Handled code review requests, see #3232
# 2.08.25 (60735) Jan 30, 2012
Energy Skate Park Basics: Make the "Return Skater" button return the skater to the original location, if the skater hasn't been moved yet
Energy Skate Park Basics: Hide the bar chart when the user switches tabs
Energy Skate Park Basics: Internationalized speedometer
# 2.08.24 (60714) Jan 27, 2012